yeah did some updates to the css files

--- a/nav__links/admission.css
+++ b/nav__links/admission.css
@@ -1,6 +1,9 @@
 .mainn {
-    width: 100%;
+    width: 80%;
     height: auto;
+
+    margin: 0px 10%;
+
 
 }
 
@@ -27,8 +30,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-bottom: 40px;
+    justify-content: center;
+    margin: 40px 70px;
 
 
 }
