--- a/nav__links/contact.css
+++ b/nav__links/contact.css
@@ -17,7 +17,11 @@
 
 .slide_container button {}
 
-
+.mainn {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+}
 
 .mainn h2 {
     text-align: left;
@@ -29,6 +33,7 @@
     margin-top: 20px;
     display: flex;
     flex-direction: row;
+    /* justify-content: center; */
     gap: 50px;
     flex-wrap: wrap;
 }
