--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 /*this is for page resizing when the max width of the screen is that of a small hand held device such as smart phones*/
 
-@media only screen and (min-width: 320px) and (max-width: 480px) {
+@media only screen and (min-width: 20px) and (max-width: 480px) {
 
     .main_header {
         overflow-x: hidden;
@@ -1721,7 +1721,7 @@
 
 
 /*this is for page resizing when the max width of the screen is that of screens larger than 15 inches laptop screens*/
-/* 
+
 @media only screen and (min-width: 1061px) {
 
     .main_header {
@@ -2196,4 +2196,4 @@
     }
 
 
-} */
+}
