--- a/style.css
+++ b/style.css
@@ -1248,7 +1248,7 @@
         justify-content: center;
         position: relative;
         width: 100%;
-        height: 600px;
+        height: 500px;
         background-image: url(./images/Pivot-Point-Family-Growth-Centre-Benefits-of-Smaller-Class-Sizes.jpg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -1260,8 +1260,8 @@
 
 
     .slide_container H2 {
-        position: absolute;
-        align-self: center;
+        /* position: absolute;
+        align-self: center; */
         margin-top: 0px;
         color: WHITE;
         font-size: 35PX;
@@ -1722,7 +1722,7 @@
 
 /*this is for page resizing when the max width of the screen is that of screens larger than 15 inches laptop screens*/
 
-@media only screen and (min-width: 1061px) {
+@media only screen and (min-width: 1441px) {
 
     .main_header {
         overflow-x: hidden;
@@ -1734,6 +1734,7 @@
         width: 100%;
         z-index: 3;
         transition: 0.6s;
+        padding: 0px 20%;
 
     }
 
@@ -1809,7 +1810,7 @@
         flex-direction: column;
         position: relative;
         width: 100%;
-        height: 1000px;
+        height: 85vh;
         background-image: url(./images/Pivot-Point-Family-Growth-Centre-Benefits-of-Smaller-Class-Sizes.jpg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -1818,22 +1819,81 @@
     }
 
 
+
     .slide_container H2 {
+        /* position: absolute;
+        align-self: center; */
+        margin-top: 500px;
         color: WHITE;
-        font-size: 40PX;
+        font-size: 55PX;
         font-weight: bolder;
         text-align: center;
+        animation-name: slide_h;
+        animation-duration: 2s;
 
+
+
+    }
+
+    @keyframes slide_h {
+        from {
+            color: transparent;
+            margin-top: -300px;
+        }
+
+        to {
+            color: white;
+            margin-top: 500px;
+        }
     }
 
     .slide_container p {
+        position: absolute;
+        align-self: center;
+        margin-top: 560px;
         color: #ffffff;
-        font-size: 25px;
+        font-weight: bolder;
+        font-size: 20px;
         text-align: center;
+        animation-name: slide_p;
+        animation-duration: 2s;
+
+
     }
 
+    @keyframes slide_p {
+        from {
+            color: #0b103b;
+        }
+
+        to {
+            color: #ffffff;
+        }
+    }
+
+    .slide_container button a {
+        color: white;
+        text-decoration: none;
+    }
+
+    .slide_container button {
+        position: absolute;
+        align-self: center;
+        height: 30px;
+        width: 100px;
+        border: solid #FFFF56 2px;
+        background-color: transparent;
+        margin-top: 620px;
+        border-radius: 30px;
+        color: white;
+        align-self: center;
+        font-weight: bolder;
+        font-size: 12PX;
+        cursor: pointer;
+    }
 
     .admission_notice {
+        background-color: #0b103b;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -1842,12 +1902,14 @@
     }
 
     .admission_notice h2 {
+        padding-top: 30px;
         font-size: 30px;
         color: #FFFF56;
 
     }
 
     .admission_notice button {
+        margin-top: 35px;
         height: 40px;
         width: 140px;
         border: solid #FFFF56 2px;
@@ -2126,6 +2188,7 @@
         z-index: 1;
         overflow-x: hidden;
         position: relative;
+        padding: 0px 15%;
 
 
     }
