--- a/nav__links/admission.css
+++ b/nav__links/admission.css
@@ -82,7 +82,7 @@
     }
 
     .admission_steps {
-        background-color: aqua;
+        /* background-color: aqua; */
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
