--- a/nav__links/admission.css
+++ b/nav__links/admission.css
@@ -72,6 +72,10 @@
 
 }
 
+.admission_steps .step {
+    text-align: justify;
+}
+
 @media only screen and (min-width: 20px) and (max-width: 480px) {
     .mainn {
         width: 100%;
