--- a/index.css
+++ b/index.css
@@ -446,7 +446,7 @@ overflow: scroll;
 }
 
 .sideMenu{
-    min-width: auto;
+    width: 30vw;
     margin-right: 10px;
     overflow: scroll;
     height: auto;
@@ -466,6 +466,7 @@ overflow: scroll;
 
 }
 
+
 .sideMenu ul ul{
     position: relative;
     transition: 0.5s;
@@ -475,7 +476,7 @@ overflow: scroll;
     margin: 2px;
 }
 
-.sideMenu ul ul li:hover{
+.sideMenu li:hover{
     background-image: linear-gradient(2400deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
     color: white;
     cursor: pointer;
