--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@ nav{
     min-width: 80vw;
     overflow: hidden;
     height: 80px;
+    margin-inline: 20px;
    
   
    
@@ -159,6 +160,7 @@ nav ul li:hover{
     padding: 30px;
     z-index: 9;
     margin-bottom: 300px;
+    /* margin-inline: 20px; */
 
 
 
@@ -169,7 +171,7 @@ nav ul li:hover{
 
 .one, .two, .three, .four, .five, .six , .seven{
     width: auto;
-    padding-top: 180px;
+    padding-top: 0px;
     /* inset: 0; */
     margin-inline: auto; 
     height: auto;
@@ -183,6 +185,7 @@ nav ul li:hover{
     color: #00ffff;
     margin-bottom: 40px;
     text-shadow: 0.5px 0.5px 8px  rgb(255, 255, 255,0.5);
+    text-align: center;
 }
 
 a{
@@ -242,10 +245,11 @@ button:hover{
     padding: 10px;
     border-radius: 30px;
     border: 1px solid #00ffff;
-    margin: 10px ;
+    margin-inline: auto ;
+    margin-bottom: 20px;
     overflow: hidden;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     overflow: hidden;
     transition: 0.5s;
 
@@ -378,8 +382,9 @@ overflow: scroll;
 
 .four >div .jobPallet .jobDescription{
     position: absolute;
-    left: 80px;
+    left: 60px;
     margin-top: 10px;
+    padding: 10px;
     
 }
 
@@ -434,7 +439,7 @@ overflow: scroll;
 }
 
 .sideMenu{
-    width: 30vw;
+    width: 50%;
     margin-right: 40px;
     overflow: scroll;
     height: auto;
@@ -506,6 +511,7 @@ overflow: scroll;
     display: flex;
     justify-content: space-between;
     gap: 100px;
+    position: relative;
 
 }
 
@@ -540,7 +546,7 @@ overflow: scroll;
     background-image: linear-gradient(120deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
     padding: 20px;
     border-radius: 30px;
-    width: 400px;
+    width: auto;
     backdrop-filter: blur(5px);
 }
 
@@ -569,18 +575,14 @@ overflow: scroll;
 }
 
 .seven button{
+    position: absolute;
     display: block;
     padding: 5px 20px;
     border-radius: 30px;
     font-weight: bolder;
     border: 0px;
     background-color: #00ffff;
-    margin-top: 10px;
-    margin-inline: auto;
-}
-
-.seven >button{
-    margin-top: 100px;
+    
 }
 
 .seven #checkbox {
@@ -589,6 +591,22 @@ overflow: scroll;
     display: inline;
     
 }
+
+
+.seven >button{
+    position: relative;
+    display: block;
+    font-size: larger;
+    font-weight: bolder;
+    margin: auto;
+    margin-top: 120px;
+    padding: 5px 15px;
+    border-radius: 30px;
+    width: auto;
+    border: 0px;
+    background-color: #00ffff;
+}
+
 footer{
     position: relative;
     width: 100%;
@@ -616,3 +634,17 @@ footer p{
     z-index: -3;
     
 } */
+
+
+
+
+/*media queries*/
+@media screen and (max-width: 768px){
+    .seven >div{
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-between; */
+        /* gap: 100px; */
+        position: relative;    }
+    
+}
