--- a/index.css
+++ b/index.css
@@ -11,10 +11,18 @@ body{
     background-repeat: no-repeat;
     color: white;
     font-family: 'Poppins', sans-serif;
-   
+    position: relative;
    
 }
-
+.shader{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(11, 16, 67,0.5);
+    z-index: 8;
+    top: 0px;
+    left: 0px;
+}
 .filtered_background{
     width: 100vw;
     height: 100vh;
@@ -178,20 +186,40 @@ nav ul li:hover{
     overflow: scroll;
     
 }
+.home{
+    align-self: center;
+    height: 100vh;
+}
 strong{
     color: #00ffff;
     font-size: 100px;
 }
 
  h1{
-    font-size: 50px;
+    font-size: 90px;
     color: #00ffff;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     text-shadow: 0.5px 0.5px 8px  rgb(255, 255, 255,0.5);
     text-align: center;
+    
 }
 h1 strong{
     color: white;
+    animation: wine;
+    animation-duration: 4s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes wine {
+    0%{
+        color: white;
+
+    }
+    100%{
+        color: #00ffff;
+    }
 }
 a{
     text-decoration: none;
@@ -203,6 +231,7 @@ p {
 }
 .one h3{
     font-size: 30px;
+    text-align: center;
    
 }
 .one >p{
@@ -448,8 +477,9 @@ overflow: scroll;
 
 }
 #sideMenuHead :nth-child(2){
-    display: none;
+    display: block;
 }
+
 
 .sideMenu{
     width: 50%;
