--- a/index.css
+++ b/index.css
@@ -109,10 +109,39 @@ nav ul li:hover{
     color: #00ffff;
 }
 
+nav >img{
+    align-self: center;
+    width: 40px;
+    height: 40px;
+    fill: #00ffff;
+}
+
+.signInUp{
+    /* background-color: #00ffff; */
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+nav button{
+    width: 100px;
+    height: 30px;
+    background-color: transparent;
+    color: white;
+    border: 1px solid #00ffff;
+    border-radius: 30px;
+    margin: 10px;
+    font-weight: bolder;
+}
+
+
+
+
+
 .subNavContainer{
     position: sticky;
     top: 80px;
-    background-color: #00ffff;
+    background-color: rgb(0, 255, 255);
     backdrop-filter: blur(30px);
     height: 40px;
     width: inherit;
@@ -149,7 +178,7 @@ nav ul li:hover{
    position: relative;
    max-width: 1200px;
    height: auto;
-   padding-top: 180px;
+   padding-top: 0px;
    margin-inline: auto;
    align-self: center;
    overflow: hidden;
@@ -180,20 +209,19 @@ nav ul li:hover{
 .one, .two, .three, .four, .five, .six , .seven{
     width: auto;
     padding-top: 0px;
-    /* inset: 0; */
     margin-inline: auto; 
     height: auto;
     overflow: scroll;
     
 }
+
 .home{
+    padding-top: 200px;
     align-self: center;
+    justify-content: center;
     height: 100vh;
 }
-strong{
-    color: #00ffff;
-    font-size: 100px;
-}
+
 
  h1{
     font-size: 90px;
@@ -203,24 +231,62 @@ strong{
     text-align: center;
     
 }
-h1 strong{
-    color: white;
+
+
+
+.bulb{
+    
+    height: 50px;
+    width: 50px;
+    border-radius: 30px;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    top: -10px;
+    margin-left: 30px;
     animation: wine;
-    animation-duration: 4s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    transform: rotate(20deg);
+
 }
 
+
+
+#inner{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    margin-inline: auto;
+    background-color: #35d8d8;
+    bottom: -9px;
+    animation: wine;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    box-shadow: 1px 1px 8px #00ffff;
+    transform: rotate(5deg);
+
+
+
+}
 @keyframes wine {
     0%{
-        color: white;
+        background-color: rgb(0, 255, 255, 0.3);
+        box-shadow: 1px 1px 8px transparent;
+
 
     }
     100%{
-        color: #00ffff;
+        background-color: #00ffff;
+        box-shadow: 1px 1px 30px #00ffff;
+
     }
 }
+
 a{
     text-decoration: none;
 }
@@ -228,6 +294,7 @@ a{
 p {
     font-size: 15px;
     line-height: 25px;
+    text-align: center;
 }
 .one h3{
     font-size: 30px;
@@ -275,7 +342,7 @@ button:hover{
 .items{
     position: relative;
     width: 250px;
-    height: 200px;
+    height: 300px;
     padding: 10px;
     border-radius: 30px;
     border: 1px solid #00ffff;
@@ -540,6 +607,11 @@ overflow: scroll;
     font-size: 30px;
 }
 
+.six p{
+    font-size: 13px;
+    text-align: left;
+    
+}
 
 
 
