--- a/index.css
+++ b/index.css
@@ -103,9 +103,12 @@ nav ul li{
     transition: 0.5s;
 }
 
+nav ul li a{
+    text-decoration: none;
+    color: white;
+}
 
-
-nav ul li:hover{
+nav ul li a:hover{
     color: #00ffff;
 }
 
@@ -282,7 +285,7 @@ nav button{
     }
     100%{
         background-color: #00ffff;
-        box-shadow: 1px 1px 30px #00ffff;
+        box-shadow: 2px 2px 50px #00ffff;
 
     }
 }
