--- a/index.css
+++ b/index.css
@@ -41,14 +41,17 @@ body{
 }
 
 header{
-    background-color: rgb(4, 9, 15, 0.4);
+    background-color: rgb(0, 255, 255,0.2);
     backdrop-filter: blur(30px);
-    height: auto;
+    height: 100px;
     width: 100vw;
     position: fixed;
+    top: 0px;
     display: flex;
     justify-content: center;
+    align-items: center;
     z-index: 10;
+    box-shadow: 1px 1px 8px black;
 
   
 }
@@ -58,10 +61,11 @@ nav{
     position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     min-width: 80vw;
     overflow: hidden;
-    height: 120px;
-    margin-inline: 20px;
+    height: inherit;
+    /* margin-inline: 20px; */
    
   
    
@@ -81,23 +85,20 @@ nav{
     font-size: 13px;
     font-weight: bold;
     color: #00ffff;
-    padding: 0;
-    margin: 0;
-
+    
 }
 
 nav ul{
     display: flex;
     justify-content: space-between;
-    padding-top: 2rem;
     flex-wrap: wrap;
     
 }
 
 nav ul li{
-    padding-left: 3rem;
+    padding-left: 30px;
     list-style: none;
-    font-weight: 90px;
+    font-weight: bold;
     font-size: 15px;;
     cursor: pointer;
     transition: 0.5s;
@@ -124,19 +125,19 @@ nav >img{
     align-items: center;
     margin-left: 20px;
     /* background-color: #00ffff; */
+    height: 50px;
 }
 
 nav button{
-    position: absolute;
     top: 0px;
     width: 100px;
     height: 30px;
     background-color: transparent;
-    color: white;
+    color: #00ffff;
     border: 1px solid #00ffff;
     border-radius: 30px;
-    /* margin: 10px; */
     font-weight: bolder;
+    margin-inline-end: 10px;
 }
 
 
@@ -181,12 +182,11 @@ nav button{
 /*this is a sample for the other pages*/
 .container{
    position: relative;
-   max-width: 1200px;
+   max-width: 1500px;
    height: auto;
-   padding-top: 0px;
+   padding-top: 150px;
    margin-inline: auto;
    align-self: center;
-   overflow: hidden;
    display: flex;
    flex-direction: column;
    z-index: 9;
@@ -197,12 +197,10 @@ nav button{
     position: relative;
     max-width: inherit;
     height: auto;
-    border-radius: 30px;
     color: white;
     padding: 30px;
     z-index: 9;
     margin-bottom: 200px;
-    /* margin-inline: 20px; */
 
 
 
@@ -348,23 +346,16 @@ button:hover{
     position: relative;
     width: 250px;
     height: 300px;
-    padding: 10px;
     border-radius: 30px;
     border: 1px solid #00ffff;
     margin-inline: auto ;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     overflow: hidden;
-    display: flex;
-    /* flex-wrap: wrap; */
     overflow: hidden;
     transition: 0.5s;
-
-}
+    background-color: rgb(0, 255, 255, 0.2);}
 
 .items .title{
-    position: absolute;
-    top: 0;
-    left: 0;
     height: 70px;
     width: inherit;
     border: 1px solid #00ffff;
@@ -396,7 +387,7 @@ button:hover{
 }
 
 .items .title:hover{
-    background-image: linear-gradient(120deg, rgb(255, 255, 255, 0.2), rgb(0, 255, 255, 0.8));
+    /* background-image: linear-gradient(120deg, rgb(255, 255, 255, 0.2), rgb(0, 255, 255, 0.8)); */
     transition: 0.5s;
     color: rgb(255, 255, 255);
     font-weight: bolder;
@@ -406,13 +397,31 @@ button:hover{
 
 
 .items p{
-    position: absolute;
     font-size: 13px;
     padding-inline: 5px;
-    bottom: 10px;
+    text-align: center;
+    position: relative;
+    top: 30px;
     
 }   
 
+.sub_features{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 30px;
+    background-color: #00ffff;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 40px;
+    align-items: center;
+    
+
+}
+.sub_features span{
+    font-weight: bolder;
+}
 
 
 
@@ -432,6 +441,7 @@ button:hover{
     justify-content: center;
     flex-wrap: wrap;
     overflow: hidden;
+   
 }
 .store ul {
     color: #00ffff;
@@ -580,13 +590,12 @@ overflow: scroll;
     transition: 0.5s;
 }
 .sideMenu ul ul:hover {
-    border: #00ffff 1px solid;
+    border: #00ffff 0px  solid;
     margin: 2px;
 }
 
 .sideMenu li:hover{
     background-image: linear-gradient(2400deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
-    color: white;
     cursor: pointer;
     font-weight: bolder;
    
@@ -598,10 +607,10 @@ overflow: scroll;
     width: 100%;
     padding: 20px;
     overflow: scroll;
-    height: auto;
-    border-radius: 30px;
-    background-image: linear-gradient(240deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
+    height: 900px;
     padding: 50px;
+    border-bottom: 3px solid #00ffff;
+    border-top: 3px solid #00ffff;
     
 }
 
@@ -626,20 +635,16 @@ overflow: scroll;
 
 
 /*definitions for the contact page*/
+
 .contact >div{
     display: flex;
     justify-content: space-between;
     gap: 100px;
     position: relative;
-
-}
-
-.contact .contactInfo{
-    /* background-color: rgb(13, 21, 21, 0.3); */
-    padding: 20px;
-    border-radius: 30px;
     
+
 }
+
 
 .contact .contactInfo h3{
     color: #00ffff;
@@ -696,8 +701,9 @@ overflow: scroll;
 }
 
 .contact button{
-    position: absolute;
+    position: relative;
     display: block;
+    margin-inline: auto;
     padding: 5px 20px;
     border-radius: 30px;
     font-weight: bolder;
