--- a/index.css
+++ b/index.css
@@ -131,16 +131,14 @@ nav >img{
 nav button{
     top: 0px;
     width: 100px;
-    height: 30px;
+    height: 40px;
     background-color: transparent;
     color: #00ffff;
     border: 1px solid #00ffff;
-    border-radius: 30px;
+    border-radius: 10px;
     font-weight: bolder;
     margin-inline-end: 10px;
 }
-
-
 
 
 
@@ -211,10 +209,10 @@ nav button{
 
 .home, .services, .store, .jobs, .appointment, .howTo , .contact{
     width: auto;
-    padding-top: 150px;
+    /* padding-top: px; */
     margin-inline: auto; 
     height: auto;
-    overflow: scroll;
+    /* overflow: scroll; */
     
 }
 
@@ -234,58 +232,55 @@ nav button{
     text-align: center;
     
 }
+.home .toollogo {
+    position: relative;
+    height: 80px;
+    width: 80px;
+    display: inline-flex;
+    top: 10px;
+    transform: rotate(20deg);
+}
+.home img{
+    position: absolute;
+    height: 80px;
+    width: 60px;
+    right: 0px;
+   
+
+}
 
 
 
 .bulb{
     
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 30px;
-    position: relative;
-    display: inline-flex;
+    border: #00ffff 3px solid;
+    position: absolute;
+    right: 10px;
+    top: 5px;
     justify-content: center;
-    top: -10px;
     margin-left: 30px;
     animation: wine;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    transform: rotate(20deg);
 
 }
 
 
-
-#inner{
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    margin-inline: auto;
-    background-color: #35d8d8;
-    bottom: -9px;
-    animation: wine;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    box-shadow: 1px 1px 8px #00ffff;
-    transform: rotate(5deg);
-
-
-
-}
 @keyframes wine {
     0%{
-        background-color: rgb(0, 255, 255, 0.3);
+        /* background-color: rgb(0, 255, 255, 0.3); */
         box-shadow: 1px 1px 8px transparent;
 
 
     }
     100%{
-        background-color: #00ffff;
-        box-shadow: 2px 2px 50px #00ffff;
+        /* background-color: #00ffff; */
+        box-shadow: 5px 5px 90px #00ffff;
 
     }
 }
@@ -317,8 +312,9 @@ a{
     margin: auto;
     margin-top: 120px;
     padding: 5px 10px;
-    border-radius: 30px;
-    width: 120px;
+    border-radius: 10px;
+    width: 150px;
+    height: 60px;
     border: 0px;
     background-color: #00ffff;
 }
@@ -326,10 +322,10 @@ button:hover{
     box-shadow: 1px 1px 8px #00ffff;
 
 }
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
     opacity: 0;
     display: none;
-} 
+}  */
 
 .home .service{
     display: flex;
@@ -387,7 +383,6 @@ button:hover{
 }
 
 .items .title:hover{
-    /* background-image: linear-gradient(120deg, rgb(255, 255, 255, 0.2), rgb(0, 255, 255, 0.8)); */
     transition: 0.5s;
     color: rgb(255, 255, 255);
     font-weight: bolder;
@@ -413,14 +408,25 @@ button:hover{
     background-color: #00ffff;
     color: black;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-inline: 40px;
     align-items: center;
     
 
 }
 .sub_features span{
-    font-weight: bolder;
+    font-weight: bold;
+    font-size: 12px;
+    width: 50%;
+    height: inherit;
+    border: 1px solid black;
+    padding-inline: 20px;
+    border-radius: 0px 0px 10px 10px;
+}
+.sub_features span:hover{
+    background-color: #0d2a59;
+    color: white;
+    
 }
 
 
@@ -452,11 +458,6 @@ button:hover{
     border: 0px;
     color: white;
 }
-
-
-/*this is the description for the jobs*/
-
-
 
 
 
@@ -516,9 +517,10 @@ overflow: scroll;
 
 .jobs button{
     width: 70px;
-    border-radius: 30px;
+    border-radius: 10px;
     padding: 5px 20px;
     width: 100px;
+    height: 50px;
     background-color: transparent;
     color: #00ffff;
     font-size: 15px;
@@ -527,6 +529,21 @@ overflow: scroll;
     margin-top: 30px;
 
 }
+
+/*this is the appointment page*/
+.appointment .appointment_pallet{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #0d2a59;
+}
+
+
+
+
+
+
 
 /*this is the definitions for the Howtos page / page 6*/
 
@@ -672,7 +689,7 @@ overflow: scroll;
     background-image: linear-gradient(120deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
     padding: 20px;
     border-radius: 30px;
-    width: auto;
+    width: 400px;
     backdrop-filter: blur(5px);
 }
 
@@ -682,10 +699,13 @@ overflow: scroll;
     margin-bottom: 20px;
     color: #ffffff;
 }
-
-.sendMessage input {
+.sendMessage input{
     width: 100%;
-    height: 30px;
+}
+.sendMessage input, textarea {
+    display: block;
+    max-width: 100%;
+    max-height: 120px;
     border-radius: 10px;
     border: 1px #00ffff solid ;
     color: white;
@@ -705,10 +725,12 @@ overflow: scroll;
     display: block;
     margin-inline: auto;
     padding: 5px 20px;
-    border-radius: 30px;
+    border-radius: 10px;
     font-weight: bolder;
     border: 0px;
     background-color: #00ffff;
+    width: 120px;
+    height: 50px;
     
 }
 
@@ -721,15 +743,12 @@ overflow: scroll;
 
 
 .contact >button{
-    position: relative;
-    display: block;
-    font-size: 15;
+    font-size: 18;
     font-weight: bolder;
-    margin: auto;
     margin-top: 120px;
-    padding: 5px 15px;
-    border-radius: 30px;
-    width: auto;
+    border-radius: 10px;
+    width: 180px;
+    height: 50px;
     border: 0px;
     background-color: #00ffff;
 }
