--- a/index.css
+++ b/index.css
@@ -65,26 +65,32 @@ nav{
     min-width: 80vw;
     overflow: hidden;
     height: inherit;
-    /* margin-inline: 20px; */
    
-  
    
 }
 
 .logo{
     display: flex;
     flex-direction: column;
+    position: relative;
+    min-width: 150px;
 }
+
 .logo img{
     width: 70px;
     height: 50px;
+    align-items: center;
+    margin: auto;
 }
 
 
 .logo p{
+    position: relative;
     font-size: 13px;
     font-weight: bold;
     color: #00ffff;
+    top: -10px;
+    text-align: center;
     
 }
 
@@ -423,7 +429,7 @@ button:hover{
     height: inherit;
     border: 1px solid black;
     padding-inline: 20px;
-    /* border-radius: 0px 0px 10px 10px; */
+    border-radius: 4px;
     transition: 0.4s;
 }
 .sub_features span:hover{
