--- a/index.css
+++ b/index.css
@@ -4,29 +4,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body{
-    background-size: cover;
-    background-repeat: no-repeat;
     color: white;
     font-family: 'Poppins', sans-serif;
-    position: relative;
-   
+       
 }
 .shader{
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(11, 16, 67,0.5);
     z-index: 8;
     top: 0px;
     left: 0px;
 }
 .filtered_background{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: fixed;
+    background-size: contain;
     animation-name: bodybackground;
     animation-duration: 10s;
     animation-iteration-count: infinite;
@@ -44,7 +43,7 @@ header{
     background-color: rgb(0, 255, 255,0.2);
     backdrop-filter: blur(30px);
     height: 100px;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0px;
     display: flex;
@@ -63,11 +62,23 @@ nav{
     justify-content: space-between;
     align-items: center;
     min-width: 80vw;
-    overflow: hidden;
     height: inherit;
+
    
    
 }
+.nav_icon{
+    display: none;
+  
+}
+
+.nav_icon img{
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    background-color: #0d2a59;
+}
+
 
 .logo{
     display: flex;
@@ -97,8 +108,6 @@ nav{
 nav ul{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    
 }
 
 nav ul li{
@@ -130,7 +139,6 @@ nav >img{
     display: flex;
     align-items: center;
     margin-left: 20px;
-    /* background-color: #00ffff; */
     height: 50px;
 }
 
@@ -145,7 +153,6 @@ nav button{
     font-weight: bolder;
     margin-inline-end: 10px;
 }
-
 
 
 .subNavContainer{
@@ -186,26 +193,23 @@ nav button{
 /*this is a sample for the other pages*/
 .container{
    position: relative;
-   max-width: 1500px;
+   width: 90%;
    height: auto;
    padding-top: 150px;
-   margin-inline: auto;
-   align-self: center;
    display: flex;
    flex-direction: column;
    z-index: 9;
+   margin-inline: auto;
 
 }
 
 .container > div{
     position: relative;
-    max-width: inherit;
     height: auto;
     color: white;
-    padding: 30px;
-    z-index: 9;
     margin-bottom: 200px;
-
+    width: 90%;
+    margin-inline: auto;
 
 
     
@@ -213,13 +217,6 @@ nav button{
 }
 
 
-.home, .services, .store, .jobs, .appointment, .howTo , .contact{
-    width: 100%;
-    margin-inline: auto; 
-    height: auto;
-  
-    
-}
 
 .home{
     display: flex;
@@ -227,7 +224,6 @@ nav button{
     padding-top: 100px;
     align-self: center;
     justify-content: center;
-    /* height: 100vh; */
 }
 
 
@@ -235,7 +231,6 @@ nav button{
     font-size: 90px;
     color: #00ffff;
     margin-bottom: 50px;
-    /* text-shadow: 0.5px 0.5px 8px  rgb(255, 255, 255,0.5); */
     text-align: center;
     
 }
@@ -279,13 +274,11 @@ nav button{
 
 @keyframes wine {
     0%{
-        /* background-color: rgb(0, 255, 255, 0.3); */
         box-shadow: 1px 1px 8px transparent;
 
 
     }
     100%{
-        /* background-color: #00ffff; */
         box-shadow: 5px 5px 90px #00ffff;
 
     }
@@ -444,9 +437,9 @@ button:hover{
 /*this is the definitions for the stores page*/
 .store >div{
     display: flex;
-    overflow: hidden;
-    height: inherit;
-    width: inherit;
+    overflow: hidden; 
+    height: 1200px;
+    width: 100%;
 
 }
 
@@ -455,7 +448,7 @@ button:hover{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    overflow: hidden;
+    gap: 20px;
    
 }
 .store ul {
@@ -590,7 +583,7 @@ overflow: scroll;
 
 
 .sideMenu{
-    width: 50%;
+    min-width: 30%;
     margin-right: 40px;
     overflow: scroll;
     height: auto;
@@ -630,13 +623,12 @@ overflow: scroll;
 }
 
 .mainMenu{
-    width: 100%;
+    width: auto;
     padding: 20px;
     overflow: scroll;
-    height: 900px;
+    height: 1200px;
     padding: 50px;
     border-bottom: 3px solid #00ffff;
-    border-top: 3px solid #00ffff;
     
 }
 
@@ -665,13 +657,11 @@ overflow: scroll;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    /* background-color: red; */
 }
 .contact >div{
-    max-width: 1000px;
+    max-width: inherit;
     display: flex;
     justify-content: space-between;
-    gap: 100px;
     align-self: center;
 
 }
@@ -771,9 +761,10 @@ footer{
     position: relative;
     width: 100%;
     height: 30px;
-    bottom: 0;
+    bottom: 0px;
     background-color: #00ffff;
     display: flex;
+    z-index: 90;
 
 }
 
@@ -786,25 +777,76 @@ footer p{
     font-weight: bolder;
 }
 
-/* .active{
-    z-index: 4;    
-}
 
-.inactive{
-    z-index: -3;
-    
-} */
+@media only screen and (max-width: 780px){
 
-
-
-
-/*media queries*/
-@media screen and (max-width: 768px){
-    .contact >div{
+    header{
+        height: 80px;
+    }
+    nav{
+        min-width: 90%;
+        justify-content: space-between;
+        margin-inline: 50px;        
+    }
+    #navlinks {
+        display: none;
+    }
+    nav ul{
+        position: fixed;
         display: flex;
         flex-direction: column;
-        /* justify-content: space-between; */
-        /* gap: 100px; */
-        position: relative;    }
-    
+        right: 0px;
+        top: 0px;
+        width: 100vw;
+        padding: 100px ;
+    }
+    nav ul li{
+        padding-bottom: 20px;
+    }
+    nav button{
+        display: none;
+    }
+    .nav_icon {
+        z-index: 20;
+        position: relative;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #nav_icon {
+        position: absolute;
+        height: inherit;
+        width: inherit;
+    }
+
+    .container{
+        padding-top: 0px;
+        width: 95%;
+        margin-inline: auto;
+        background-color: red;
+    }
+
+    .container >div{
+        width: 100%;
+    }
+h1 {
+    font-size: 60px;
+    margin-bottom: 0px;
+    border-bottom: 1px solid white;
 }
+    .items {
+        height: 230px;
+        width: 180px;
+    }
+    .items p{
+        top: 10px;
+    }
+
+    .contact  >div{
+        flex-direction: column;
+        gap: 30px;
+    }
+} 
