--- a/index.css
+++ b/index.css
@@ -653,13 +653,9 @@ overflow: scroll;
 
 
 /*definitions for the contact page*/
-.contact {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
+
 .contact >div{
-    max-width: inherit;
+    width: inherit;
     display: flex;
     justify-content: space-between;
     align-self: center;
@@ -693,7 +689,7 @@ overflow: scroll;
     background-image: linear-gradient(120deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
     padding: 20px;
     border-radius: 30px;
-    width: 400px;
+    min-width: inherit;
     backdrop-filter: blur(5px);
 }
 
@@ -826,7 +822,6 @@ footer p{
         padding-top: 0px;
         width: 95%;
         margin-inline: auto;
-        background-color: red;
     }
 
     .container >div{
