--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ body{
 }
 
 header{
-    /* background-color: rgb(0, 255, 255,0.2); */
+    background-color: rgb(0, 255, 255,0.2);
     backdrop-filter: blur(30px);
     height: 100px;
     width: 100%;
@@ -95,15 +95,12 @@ nav{
     
 }
 
+
 nav ul{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 200px;
-    height: 80px;
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    background-color: red;
+    /* justify-content: space-between; */
+    /* background-color: red; */
 }
 
 nav ul li{
@@ -769,40 +766,49 @@ footer p{
 }
 
 
-@media only screen and (max-width: 780px){
+@media only screen and (max-width: 900px){
 
     header{
         height: 80px;
     }
     nav{
+        position: absolute;
         min-width: 90%;
         justify-content: space-between;
-        margin-inline: 50px;  
+        margin-inline: 100px;  
     }
-    #navlinks {
-        display: none;
+      
+    .navlinks{
+        position: relative;
+        width: 100vw;
+        height: auto;
+        background-color: red;
     }
-    
     nav ul{
-        background-color: rgba(6, 9, 40);
-        backdrop-filter: blur(30px);
-        position: fixed;
+        position: absolute;
         display: flex;
         flex-direction: column;
         right: 0px;
         top: 80px;
         width: 100%;
-        padding-top: 20px ;
+        padding-top: 20px;
         height: 100vh;
+        /* background-color: rgb(3, 5, 26, 0.9); */
+        backdrop-filter: blur(90px);
         
     }
-    nav ul li{
-        padding-top: 20px;
-        transition: 0.5s;
-    }
+   
+   
+ 
     nav ul li{
         border-bottom: 1px solid #00ffff;
         margin-inline: 100px;
+        padding-top: 20px;
+        transition: 0.5s;
+    }
+    nav ul li:hover{
+        background-color: #00ffff;
+        color:red;
     }
     nav ul li a{
         font-size: 20px;
