responsiveness for smaller screens

--- a/index.css
+++ b/index.css
@@ -588,7 +588,7 @@ overflow: scroll;
     height: auto;
     transition: 0.8s;
     display: block; 
-    background-color: red;
+    /* background-color: red; */
 }
 
 
@@ -629,7 +629,7 @@ overflow: scroll;
     height: 1200px;
     padding: 50px;
     border-bottom: 3px solid #00ffff;
-    background-color: red;
+    /* background-color: red; */
     
 }
 
@@ -789,7 +789,7 @@ footer p{
       
         min-width: 90%;
         justify-content: space-between;
-        margin-inline: 100px;  
+        /* margin-inline: 100px;   */
     }
       
      nav ul{
@@ -799,9 +799,9 @@ footer p{
         right: 0px;
         top: 80px;
         width: 100%;
-        padding-top: 20px;
+        padding: 20px;
         height: auto;
-        background-color: #061327;
+        background-color: #020e21;
         backdrop-filter: blur(90px);
         
     }
@@ -810,9 +810,10 @@ footer p{
  
     nav ul li{
         border-bottom: 1px solid #00ffff;
-        margin-inline: 100px;
+        margin-inline: 80px;
         padding-top: 20px;
         transition: 0.5s;
+        right: 0px;
     }
     
     nav ul li a{
@@ -858,7 +859,7 @@ h1 {
 }
     .items {
         height: 230px;
-        width: 20d0px;
+        width: 200px;
     }
     .items p{
         top: 10px;
@@ -869,3 +870,52 @@ h1 {
         gap: 30px;
     }
 }  
+
+
+
+
+@media only screen and (max-width: 426px) {
+
+    .nav_icon img {
+            width: 35px;
+            height: 35px;
+        }
+    .container {
+        /* background-color: brown; */
+    }
+    .home{
+        padding-top: 30px;
+    }
+    .home p{
+        font-size: 13px;
+        line-height: 20px;
+    }
+
+        .mainMenu {
+            display: none;
+        }
+}
+
+
+
+@media only screen and (max-width: 320px) {
+    .nav_icon img{
+        width: 30px;
+        height: 30px;
+    }
+   .container >div{
+    margin-bottom: 60px;
+    width: 100%;
+   }
+
+    h1{
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+.container {
+    /* background-color: green; */
+}
+
+
+
+}
